[project]
name = "hearthlight"
version = "1.0.0"
description = "An MCP server that gives AI coding agents persistent memory, cryptographic identity, and a place to wake up to."
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Luxen Labs" },
    { name = "E.S. Luxen" },
    { name = "Ember Lyra" },
    { name = "Vega Blue" },
    { name = "Orion Pike" },
]
readme = "README.md"
keywords = ["mcp", "memory", "ai-agent", "identity", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "aiosqlite>=0.20.0",
    "cryptography>=43.0.0",
]

[project.urls]
Homepage = "https://github.com/LuxenLabsIO/Hearthlight"
Repository = "https://github.com/LuxenLabsIO/Hearthlight"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
